--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,6 +170,10 @@ h3 {
   flex-wrap: wrap;
 }
 .app-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 0.5rem;
   margin: 1rem;
 }
